--- a/DevBlog/Views/Shared/_Layout.cshtml
+++ b/DevBlog/Views/Shared/_Layout.cshtml
@@ -16,7 +16,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("dev br", "Index", "Home", null, new { @class = "navbar-brand" })
+                @*@Html.ActionLink("dev br", "Index", "Home", null, new { @class = "navbar-brand" })*@
+                <a href='@Url.Action("Index", "Home")'>
+                    <img class="logo" src='@Url.Content("~/Content/Images/devbr.png")' />
+                </a>
             </div>
 
             <div class="navbar-collapse collapse">
