--- a/DevBlog/Views/Shared/_Layout.cshtml
+++ b/DevBlog/Views/Shared/_Layout.cshtml
@@ -16,15 +16,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @*@Html.ActionLink("dev br", "Index", "Home", null, new { @class = "navbar-brand" })*@
-                <a href='@Url.Action("Index", "Home")'>
-                    <img class="logo" src='@Url.Content("~/Content/Images/devbr.png")' />
+                <a href='@Url.RouteUrl("")'>
+                    <img class="logo" src='@Url.Content("~/Content/Images/codebr.png")' />
                 </a>
             </div>
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li><a href="about">About</a></li>
+                    @*<li>@Html.RouteLink("About", "about")</li>*@
                     <li>
                         <div class="search-wrapper">
                             <div class="search-bar">
