--- a/DevBlog/Views/Shared/_Layout.cshtml
+++ b/DevBlog/Views/Shared/_Layout.cshtml
@@ -16,15 +16,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href='@Url.RouteUrl("")'>
-                    <img class="logo" src='@Url.Content("~/Content/Images/codebr.png")' />
+                <a href='@Url.Action("Index", "Home")'>
+                    <img class="logo" src='@Url.Content("~/Content/Images/devbr.png")' />
                 </a>
             </div>
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="about">About</a></li>
-                    @*<li>@Html.RouteLink("About", "about")</li>*@
+                    <li>@Html.ActionLink("About", "About")</li>
+                    <li>@Html.ActionLink("New", "New", "Article")</li>
                     <li>
                         <div class="search-wrapper">
                             <div class="search-bar">
